--- a/app/src/main/res/drawable/bordermain.xml
+++ b/app/src/main/res/drawable/bordermain.xml
@@ -3,7 +3,7 @@
 
     <item android:state_enabled="true" android:state_focused="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/lightPurple"/>
             <corners android:radius="23.40dp"/>
             <stroke android:color="#2a364e" android:width="1dp"/>
         </shape>
@@ -12,7 +12,7 @@
     <item android:state_enabled="true">
         <shape android:shape="rectangle">
             <corners android:radius="15.40dp"/>
-            <solid android:color="@color/white"/>
+            <solid android:color="@color/lightPurple"/>
             <stroke android:color="@color/black" android:width="1dp"/>
         </shape>
     </item>
