--- a/app/src/main/res/drawable/purple_bg.xml
+++ b/app/src/main/res/drawable/purple_bg.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="@color/darkPurple"/>
-    <corners  android:radius="100dp"/>
+        <solid android:color="@color/basic"/>
+    <corners  android:radius="10dp"/>
     </shape>
 </item>
 </selector>
