--- a/app/src/main/res/layout/main_patient.xml
+++ b/app/src/main/res/layout/main_patient.xml
@@ -7,9 +7,9 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:theme="@style/Theme.AppCompat"
-    tools:context=".MainActivityPatient"
+    tools:context=".patient.Patient_MainActivity"
     tools:openDrawer="start"
-    android:background="@color/white">
+    android:background="@color/lightPurple">
 
 
 
@@ -41,11 +41,25 @@
         </androidx.appcompat.widget.Toolbar>
 
 
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="300dp"
+            android:layout_height="40dp"
+            android:text="Do you want to check your disease ? "
+            android:textColor="@color/grey"
+            android:gravity="center"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
+            app:layout_constraintTop_toTopOf="@id/nametext"
+            app:layout_constraintVertical_bias="0.526"
+            tools:layout_editor_absoluteX="55dp"
+            tools:ignore="MissingConstraints" />
 
         <EditText
             android:id="@+id/nametext"
             android:layout_width="224dp"
             android:layout_height="49dp"
+            android:background="@drawable/purple_bg"
             android:ems="10"
             android:hint="@string/main_name"
             android:inputType="textPersonName"
@@ -56,31 +70,18 @@
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/toolbar"
-            app:layout_constraintHorizontal_bias="0.668"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="@+id/toolbar"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.53"
+            app:layout_constraintVertical_bias="0.693"
             tools:ignore="Autofill,HardcodedText" />
-
-        <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="39dp"
-            android:layout_height="46dp"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="28dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.146"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.512"
-            app:srcCompat="@drawable/name" />
 
         <EditText
             android:id="@+id/agetext"
             android:layout_width="224dp"
             android:layout_height="49dp"
             android:layout_marginEnd="12dp"
+            android:background="@drawable/purple_bg"
             android:ems="10"
             android:hint="@string/main_age"
             android:inputType="phone"
@@ -90,63 +91,47 @@
             android:textSize="22sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.712"
+            app:layout_constraintHorizontal_bias="0.582"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.628" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="46dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="26dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginBottom="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.122"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/toolbar"
-            app:layout_constraintVertical_bias="0.626"
-            app:srcCompat="@drawable/age" />
+            app:layout_constraintVertical_bias="0.775" />
 
         <ImageView
             android:id="@+id/imageView7"
-            android:layout_width="106dp"
-            android:layout_height="103dp"
+            android:layout_width="78dp"
+            android:layout_height="59dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/toolbar"
-            app:layout_constraintVertical_bias="0.917"
+            app:layout_constraintVertical_bias="0.976"
             app:srcCompat="@drawable/enter1" />
-
-
 
         <RadioGroup
             android:id="@+id/rg1"
-            android:layout_width="320dp"
+            android:layout_width="224dp"
             android:layout_height="54dp"
+            android:background="@drawable/purple_bg"
             android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.494"
+            app:layout_constraintHorizontal_bias="0.545"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.738">
+            app:layout_constraintVertical_bias="0.864">
 
             <RadioButton
                 android:id="@+id/male"
-                android:layout_width="135dp"
+                android:layout_width="100dp"
                 android:layout_height="43dp"
-                android:layout_marginLeft="29dp"
+                android:layout_marginLeft="10dp"
                 android:buttonTint="@color/purple"
                 android:checked="false"
                 android:text="@string/main_male"
                 android:textAlignment="textStart"
-                android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.172"
@@ -156,15 +141,15 @@
 
             <RadioButton
                 android:id="@+id/female"
-                android:layout_width="145dp"
+                android:layout_width="100dp"
                 android:layout_height="43dp"
                 android:buttonTint="@color/purple"
                 android:checked="false"
                 android:paddingLeft="5dp"
                 android:text="@string/main_female"
                 android:textAlignment="textStart"
-                android:textColor="@color/black"
-                android:textSize="24sp"
+                android:textColor="@color/white"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.849"
@@ -181,31 +166,27 @@
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.39"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/toolbar"
-            app:layout_constraintVertical_bias="0.17"
+            app:layout_constraintVertical_bias="0.339"
             app:srcCompat="@drawable/women" />
 
         <TextView
             android:id="@+id/welcomeTextView"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="sans-serif-medium"
+            android:layout_width="362dp"
+            android:layout_height="100dp"
+            android:layout_marginEnd="24dp"
+            android:fontFamily="serif"
             android:gravity="center"
             android:text="Welcome to AssistDoc, your trusted companion for healthcare needs!"
             android:textColor="@color/black"
             android:textSize="24sp"
             android:textStyle="bold|italic"
-            app:layout_constraintBottom_toBottomOf="@id/imageView8"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@id/imageView8"
-            app:layout_constraintTop_toTopOf="@id/imageView8"
-            app:layout_constraintVertical_bias="0.509" />
+            app:layout_constraintBottom_toTopOf="@id/imageView8"
+            app:layout_constraintEnd_toEndOf="@id/toolbar"
+
+            />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -221,6 +202,8 @@
         app:itemTextColor="@color/black"
         android:backgroundTint="@color/white"
         tools:ignore="MissingConstraints" />
+
+
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
