--- a/app/src/main/res/layout/layout_screen.xml
+++ b/app/src/main/res/layout/layout_screen.xml
@@ -39,6 +39,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:textColor="#505050"
         android:layout_marginRight="32dp"
         android:layout_marginBottom="8dp"
         android:text="TextView"
