--- a/app/src/main/res/layout/activity_patient_details.xml
+++ b/app/src/main/res/layout/activity_patient_details.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/lightPurple">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -82,7 +83,9 @@
             android:id="@+id/btn_add_appointment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Add Appointment" />
+            android:text="Add Appointment"
+            android:backgroundTint="@color/accent_500"
+            />
 
         <!-- List of Appointments -->
         <TextView
